[gd_scene load_steps=4 format=3 uid="uid://efxtolgv7k2p"]

[ext_resource type="Script" uid="uid://crjiw8rulnf4e" path="res://scripts/ui/cutscene.gd" id="1_wchr6"]
[ext_resource type="Theme" uid="uid://bynbwd6b4phd7" path="res://assets/themes/theme.tres" id="2_bbya1"]

[sub_resource type="LabelSettings" id="LabelSettings_bbya1"]
line_spacing = 10.0
paragraph_spacing = 20.0
font_size = 24

[node name="Cutscene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wchr6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="StoryLabel" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_top = 100.0
offset_right = 500.0
offset_bottom = 527.0
grow_horizontal = 2
theme = ExtResource("2_bbya1")
label_settings = SubResource("LabelSettings_bbya1")
autowrap_mode = 2

[node name="ContinueButton" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -153.0
offset_top = -71.0
offset_right = -65.0
offset_bottom = -42.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_bbya1")
text = "Continue"

[connection signal="pressed" from="ColorRect/ContinueButton" to="." method="_on_continue_button_pressed"]
